--- a/test01/mouseTest.html
+++ b/test01/mouseTest.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+<head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <style>
+        *{margin:0;padding:0;}
+        ul{list-style:none;}
+        #box {
+            height: 70px;
+            width: 360px;
+            padding-top: 360px;
+            border:1px solid #ccc;
+            margin:100px auto;
+            overflow: hidden;
+            background: url(images/01big.jpg) no-repeat;
+        }
+        #box ul{
+            overflow: hidden;
+            border-top:1px solid #ccc;
+        }
+        #box li {
+            float: left;
+        }
+    </style>
+    <script>
+        window.onload = function(){
+
+            var box = document.getElementById("box");
+            function fn(liid,bg){  // 封装函数  参数的传递
+                var obj = document.getElementById(liid);
+                obj.onmouseover = function(){
+                    box.style.backgroundImage = bg;
+                }
+            }
+            fn("li01","url(images/01big.jpg)"); // 实参  调用函数
+            fn("li02","url(images/02big.jpg)");
+            fn("li03","url(images/03big.jpg)");
+            fn("li04","url(images/04big.jpg)");
+            fn("li05","url(images/05big.jpg)");
+
+        }
+    </script>
 </head>
 <body>
-hello
-
+<div id="box">
+    <ul>
+        <li id="li01"><img src="images/01.jpg" alt=""/></li>
+        <li id="li02"><img src="images/02.jpg" alt=""/></li>
+        <li id="li03"><img src="images/03.jpg" alt=""/></li>
+        <li id="li04"><img src="images/04.jpg" alt=""/></li>
+        <li id="li05"><img src="images/05.jpg" alt=""/></li>
+    </ul>
+</div>
 </body>
 </html>
